--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Click==7.0
 dominate==2.4.0
 Flask==1.1.1
 Flask-Bootstrap==3.3.7.1
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
